<resources>
    <string name="app_name">Proyecto</string>
    <string name="Login">LOGIN</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="B_login">LOGIN</string>
    <string name="forgot">forgot password?</string>
    <string name="signin"><u>SIGN IN</u></string>
    <string name="navigation_top">  PLANNING POKER</string>
    <string name="deck">Deck</string>
    <string name="mundo">ROOMS</string>
    <string name="ajuste">SETTINGS</string>
    <string name="baraja">DECKS</string>
    <string name="createroom">Create Room</string>
    <string name="joinroom">Join Room</string>
    <string name="baraja_view">Coffee</string>
    <string name="name_room">NAME</string>
    <string name="password_room">PASSWORD</string>
    <string name="save_room">SAVE</string>
    <string name="delete_room">DELETE</string>
    <string name="invalid">INVALID EMAIL/PASSWORD</string>
    <string-array name="deck_options">
        <item>DECKS</item>
        <item>Standard</item>
        <item>T-Shirt</item>
        <item>Fibonacci</item>
        <item>Hours</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>