<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crear_salas_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">
        <EditText
            android:id="@+id/new_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_room"
            android:inputType="text"></EditText>
        <EditText
            android:id="@+id/new_room_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_room"
            android:inputType="textPassword"></EditText>
        <Button
            android:id="@+id/button_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/fondo"
            android:textColor="@color/fondo2"
            android:text="@string/save_room">

        </Button>
    </LinearLayout>

</FrameLayout>