<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/borde_color"
        android:orientation="vertical"
        android:layout_marginTop="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15px"
            android:layout_marginBottom="100px"
            android:gravity="center|top"
            android:text="@string/Login"
            android:textColor="@color/fondo2"
            android:textSize="24sp"></TextView>

        <LinearLayout
            android:id="@+id/linear_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_login">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:textColor="@color/fondo2"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="0.7"
                android:hint="@string/email"
                android:inputType="text"
                android:textColorHint="@color/fondo2">

            </EditText>

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:textColor="@color/fondo2"
                android:layout_marginTop="25dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.7"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/fondo2">

            </EditText>

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/fondo2"
                android:text="@string/B_login"
                android:textColor="@color/fondo"
                android:textSize="18sp">

            </Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20px"
                android:layout_marginBottom="5px"
                android:text="@string/forgot"
                android:textColor="@color/fondo2"
                android:textSize="18sp">

            </TextView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="40px"
            android:layout_marginBottom="100px"
            android:text="@string/signin"
            android:textColor="@color/fondo2"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/linear_login"
            app:layout_constraintTop_toBottomOf="@+id/linear_data">

        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/invalid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_login"
        app:layout_constraintVertical_bias="0.111"
        android:textSize="22sp">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>